# plfog

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_INDEX.md  Dockerfile  FRONTEND.md  LICENSE  Makefile  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
airtable_sync/: CLAUDE.md  apps.py  client.py  config.py  service.py
billing/: CLAUDE.md  admin.py  apps.py  context_processors.py  exceptions.py  fields.py  forms.py  models.py  notifications.py  reports.py  stripe_utils.py  urls.py  views.py  webhook_handlers.py
classes/: admin.py  apps.py  emails.py  factories.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py  webhook_handlers.py
core/: CLAUDE.md  admin.py  apps.py  checks.py  context_processors.py  files.py  forms.py  models.py  urls.py  validators.py  views.py
dev_fixtures/: dev_users.json
docs/: CODEBASE_INDEX.md  RUNBOOK.md  guild_voting_spec.md  mailchimp-implementation-plan.md
education/: admin.py  apps.py  models.py
hub/: CLAUDE.md  calendar_service.py  context_processors.py  forms.py  permissions.py  toast.py  urls.py  view_as.py  views.py
membership/: CLAUDE.md  admin.py  airtable_sync.py  apps.py  cycle.py  forms.py  managers.py  models.py  signals.py  stripe_utils.py  urls.py  views.py  vote_calculator.py  vote_emails.py  vote_forms.py  vote_tokens.py  vote_urls.py  vote_views.py
plfog/: adapters.py  admin_views.py  auto_admin.py  capabilities.py  capability_middleware.py  dashboard.py  dev_auto_login.py  service_worker_middleware.py  settings.py  urls.py  version.py
static/: manifest.json  (+1 more)
(+444 files in other folders)
